--- a/src/app/pages/create-group/group-invite/group-invite.component.html
+++ b/src/app/pages/create-group/group-invite/group-invite.component.html
@@ -32,10 +32,8 @@
 
 
 
-    <a mat-raised-button color="accent" class="block  large action-btn" [routerLink]="['/group',group.id]"
-        [translate]="'gInvite.go'">الانتقال
-        لصفحة
-        مجموعة الختمة</a>
+    <a mat-raised-button color="accent" class="block  large action-btn" [routerLink]="['/group',group.id]"><span
+            [translate]="'gInvite.go'">الانتقال لصفحة مجموعة الختمة</span></a>
 
 
 </div>
