--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,25 @@
 
       <span class="spacer"></span>
 
+      <span class="lang-wrapper">
+        <mat-icon class="lang-toggle" aria-hidden="false" aria-label="Language" (click)="showLang=!showLang">language
+        </mat-icon>
+        <mat-nav-list *ngIf="showLang" class="lang-list">
+          <mat-list-item *ngFor="let lang of common.languages">
+            <a href="javascript:;" (click)="changeLanguage(lang.value)">{{ lang.text }}</a>
+          </mat-list-item>
+        </mat-nav-list>
+      </span>
+
+
+      <!-- <mat-form-field appearance="fill" class="lang-dropdown">
+        <mat-icon aria-hidden="false" aria-label="Language">language</mat-icon>
+        <mat-select [(value)]="common.currentLanguage">
+          <mat-option value="ar">العربية</mat-option>
+          <mat-option value="en">English</mat-option>
+        </mat-select>
+      </mat-form-field> -->
+
       <mat-icon matBadge="1" matBadgePosition="before" matBadgeSize="medium" matBadgeColor="accent"
         (click)="showNotification()" [matBadgeHidden]="!unreadNotification" gaEvent="show_notification_clicked"
         gaCategory="notifications">notifications
