--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@use '~@angular/material' as mat;
+@use "~@angular/material" as mat;
 
 @import url("https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;700&display=swap");
-
 
 @import "~src/_variables";
 
@@ -17,7 +16,12 @@ body {
   background: black;
   overflow: hidden;
 }
-
+.rtl {
+  direction: rtl;
+}
+.ltr {
+  direction: ltr;
+}
 body {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
